hphp/test/slow/inout/bad-class.php.expectf

Fatal error: syntax error, unexpected T_INOUT in %s/bad-class.php on line 3
